--- a/app/src/main/res/layout/activity_feed_list_edit.xml
+++ b/app/src/main/res/layout/activity_feed_list_edit.xml
@@ -1,7 +1,26 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-		  xmlns:tools="http://schemas.android.com/tools"
-		  android:id="@+id/fragment"
-		  android:name="net.frju.flym.ui.feeds.FeedListEditFragment"
-		  android:layout_width="match_parent"
-		  android:layout_height="match_parent"
-		  tools:layout="@layout/fragment_feed_list_edit"/>
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
+
+	<fragment
+		android:id="@+id/fragment"
+		android:name="net.frju.flym.ui.feeds.FeedListEditFragment"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:layout="@layout/fragment_feed_list_edit"/>
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/add_feed_edit_list_fab"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="16dp"
+		android:layout_marginBottom="16dp"
+		android:clickable="false"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:srcCompat="@drawable/ic_add_white_24dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
