--- a/app/src/main/res/menu/menu_fragment_feed_list_edit.xml
+++ b/app/src/main/res/menu/menu_fragment_feed_list_edit.xml
@@ -7,4 +7,14 @@
 		android:title="@string/menu_add_group"
 		android:icon="@drawable/ic_create_new_folder_white_24dp"
 		app:showAsAction="ifRoom"/>
+
+	<item
+		android:id="@+id/import_feeds_edit"
+		android:title="@string/menu_import"
+		app:showAsAction="never"/>
+
+	<item
+		android:id="@+id/export_feeds_edit"
+		android:title="@string/menu_export"
+		app:showAsAction="never"/>
 </menu>
